--- a/package.json
+++ b/package.json
@@ -1,15 +1,17 @@
 {
   "name": "showcase-api",
   "version": "1.0.0",
-  "description": "",
+  "description": "Anime API",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.18.1"
   }
 }
